#VERSION 0.9.3#

 - added method pagination() in Peak_Model_Zendatable to access to Peak_Model_Pagination 
 - added new class Peak_Model_Pagination for Peak_Model_Zendatable
 - added 4 new shorcut method for escaping stuff in Peak_Model_Zendatable

#VERSION 0.9.2#
 
 - added class Peak_Model_Authentication to simplify authentication mechanism with database 
 - fixed method preAction() of Peak_Controller_Internal_PkError due to recent change in Peak_View_Cache
 - modified method __construct() from Peak_Application_Modules to use newly created method in Peak_Application 
 - added 2 methods in Peak_Application to clean up method __construct()
 - removed property $_ctrl_name in Peak_Application_Modules and refactored method prepare()
 - fixed two small bugs in Peak_View_Helper_Debugbar
 - fixed method cleanArray() in Peak_Model_Zendatable to force Zend_db to describe table. This prevents
   issues in some case where method save() is the first interaction with the table and $_metadata are not 
   yet gathered.
 - added new Peak_Exception error constant called. This exception can be raise by Peak_Core::initConfig()
 - added Zend_Db_Profiler infos if enabled to Peak_View_Helper_debugbar
 - modified class Peak_View_Helper_debugbar and moved js and css to debugbar folder
 - updated vendor zend to version 1.11.11
 - added twitter bootstrap to vendors 
 - fixed html entities problem in Peak_Controller_Internal_Pkdoc
 - fixed another class name problem on certain case sensitive os with Peak_View_Helper_form, Peak_View_Helper_form_select, 
   Peak_View_Helper_form_input and Peak_View_Helper_tagattrs

#VERSION 0.9.1#

 - added class Peak_Annotations
 - fixed class name case sensitive problem on certain os with Peak_View_Helper_form, Peak_View_Helper_form_select and
   Peak_View_Helper_form_input
 - fixed some display bugs in Peak_Controller_Internal_Pkdoc
 - fixed method save() from Peak_Model_Zendatable to return primary key on update query